--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-09-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/667458'>Check selection validation after webkitBeforeTextInserted fired</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-09-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/643041'>Handle TypingCommand::InsertText missing cases</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-09-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/664777'>Update queryCommandSupported for paste command</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-09-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/666877'>Reorg core/editing directory</a></td><td>Shanmuga Pandi M</td></tr>
