--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-09-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/670906'>Rename RegisteredEventListener::listener() to callback() to match the specification</a></td><td>Bhagirathi Satpathy</td></tr>
 <tr><td>2017-09-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/669462'>PaymentHandler: Fix [Exposed] extended attribute in PaymentInstruments.</a></td><td>Jinho Bang</td></tr>
 <tr><td>2017-09-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/647353'>Change default value of aria-valuemax on some roles</a></td><td>DongJun Kim</td></tr>
 <tr><td>2017-09-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/670904'>Remove unused members from SVGPathQuery and its related state.</a></td><td>Shanmuga Pandi M</td></tr>
